grammar.js
    source_file: ($) =>
      choice(
        // Case 1: Document with a real header.
        //
        // The header MUST be the very first thing in the file
        // (no leading blank lines). After that, just normal blocks.
        prec(
          1,
          seq(
            field("header", $.document_header),
            repeat(choice($._blank_line, $._block_element)),
          ),
        ),

        // Case 2: Headerless document.
        //
        // Arbitrary mix of blank lines and blocks; any "header-looking"
        // lines here are treated as normal content (paragraphs/sections).
        repeat(choice($._blank_line, $._block_element)),
      ),

    _block_element: ($) =>
      choice(
        $.section,
        $.attribute_entry,
        $.description_list,
        $.callout_list,
        $.unordered_list,
        $.ordered_list,
        $.block_macro,
        $.block_admonition,
        $.inline_admonition,
        $.example_block,
        $.listing_block,
        $.fenced_code_block,
        $.block_quote,
        $.asciidoc_blockquote,
        $.literal_block,
        $.sidebar_block,
        $.passthrough_block,
        $.open_block,
        $.conditional_block,
        $.table_block,
        $.thematic_break,
        $.page_break,
        $.paragraph,
      ),

    section: ($) =>
      choice(
        $.section_level_2,
        $.section_level_3,
        $.section_level_4,
        $.section_level_5,
        $.section_level_6,
      ),

    section_level_2: ($) =>
      prec.right(
        seq(
          optional($.anchor),
          field("marker", $.section_marker_2),
          field("title", $.title),
          $._line_ending,
          field(
            "content",
            repeat(
              choice(
                $.attribute_entry,
                $.paragraph,
                $.unordered_list,
                $.ordered_list,
                $.description_list,
                $.callout_list,
                $.block_admonition,
                $.example_block,
                $.listing_block,
                $.fenced_code_block,
                $.block_quote,
                $.asciidoc_blockquote,
                $.literal_block,
                $.sidebar_block,
                $.passthrough_block,
                $.open_block,
                $.conditional_block,
                $.block_macro,
                $.inline_admonition,
                $.table_block,
                $.section_level_3,
                $._blank_line,
              ),
            ),
          ),
        ),
      ),

    section_level_3: ($) =>
      prec.right(
        seq(
          optional($.anchor),
          field("marker", $.section_marker_3),
          field("title", $.title),
          $._line_ending,
          field(
            "content",
            repeat(
              choice(
                $.attribute_entry,
                $.paragraph,
                $.unordered_list,
                $.ordered_list,
                $.description_list,
                $.callout_list,
                $.block_admonition,
                $.example_block,
                $.listing_block,
                $.fenced_code_block,
                $.block_quote,
                $.asciidoc_blockquote,
                $.literal_block,
                $.sidebar_block,
                $.passthrough_block,
                $.open_block,
                $.conditional_block,
                $.block_macro,
                $.inline_admonition,
                $.table_block,
                $.section_level_4,
                $._blank_line,
              ),
            ),
          ),
        ),
      ),

    section_level_4: ($) =>
      prec.right(
        seq(
          optional($.anchor),
          field("marker", $.section_marker_4),
          field("title", $.title),
          $._line_ending,
          field(
            "content",
            repeat(
              choice(
                $.attribute_entry,
                $.paragraph,
                $.unordered_list,
                $.ordered_list,
                $.description_list,
                $.callout_list,
                $.block_admonition,
                $.example_block,
                $.listing_block,
                $.fenced_code_block,
                $.block_quote,
                $.asciidoc_blockquote,
                $.literal_block,
                $.sidebar_block,
                $.passthrough_block,
                $.open_block,
                $.conditional_block,
                $.block_macro,
                $.inline_admonition,
                $.table_block,
                $.section_level_5,
                $._blank_line,
              ),
            ),
          ),
        ),
      ),

    section_level_5: ($) =>
      prec.right(
        seq(
          optional($.anchor),
          field("marker", $.section_marker_5),
          field("title", $.title),
          $._line_ending,
          field(
            "content",
            repeat(
              choice(
                $.attribute_entry,
                $.paragraph,
                $.unordered_list,
                $.ordered_list,
                $.description_list,
                $.callout_list,
                $.block_admonition,
                $.example_block,
                $.listing_block,
                $.fenced_code_block,
                $.block_quote,
                $.asciidoc_blockquote,
                $.literal_block,
                $.sidebar_block,
                $.passthrough_block,
                $.open_block,
                $.conditional_block,
                $.block_macro,
                $.inline_admonition,
                $.table_block,
                $.section_level_6,
                $._blank_line,
              ),
            ),
          ),
        ),
      ),

    section_level_6: ($) =>
      prec.right(
        seq(
          optional($.anchor),
          field("marker", $.section_marker_6),
          field("title", $.title),
          $._line_ending,
          field(
            "content",
            repeat(
              choice(
                $.attribute_entry,
                $.paragraph,
                $.unordered_list,
                $.ordered_list,
                $.description_list,
                $.callout_list,
                $.block_admonition,
                $.example_block,
                $.listing_block,
                $.fenced_code_block,
                $.block_quote,
                $.asciidoc_blockquote,
                $.literal_block,
                $.sidebar_block,
                $.passthrough_block,
                $.open_block,
                $.conditional_block,
                $.block_macro,
                $.inline_admonition,
                $.table_block,
                $._blank_line,
              ),
            ),
          ),
        ),
      ),

    title: ($) => token.immediate(/[^\r\n]+/),

    section_marker_2: ($) => token(prec(45, seq("==", /[ \t]+/))),
    section_marker_3: ($) => token(prec(40, seq("===", /[ \t]+/))),
    section_marker_4: ($) => token(prec(35, seq("====", /[ \t]+/))),
    section_marker_5: ($) => token(prec(30, seq("=====", /[ \t]+/))),
    section_marker_6: ($) => token(prec(25, seq("======", /[ \t]+/))),

    // ATTRIBUTE ENTRIES - Support both :name: and :name: value forms
    // Keep the delimiters explicit so highlight queries can capture the identifier directly.
    attribute_entry: ($) =>
      seq(
        field("name", $.attribute_name),
        optional(field("value", seq(token.immediate(/[ \t]+/), $.attribute_value))),
        $._line_ending,
      ),

    attribute_value: ($) => /[^\r\n]+/,

    unordered_list: ($) =>
      prec.right(field("items", seq(optional($.anchor), repeat1($.unordered_list_item)))),

    unordered_list_item: ($) =>
      prec.right(
        1,
        seq(
          field("marker", alias($._unordered_list_marker, $.unordered_list_marker)),
          optional(field("checkbox", $.checklist_marker)),
          optional($.anchor),
          field("content", $._inline_text),
          $._line_ending,
          repeat(
            choice(
              $.list_item_continuation,
              alias($._nested_unordered_list, $.unordered_list),
              alias($._nested_ordered_list, $.ordered_list),
            ),
          ),
        ),
      ),

    ordered_list: ($) =>
      prec.right(field("items", seq(optional($.anchor), repeat1($.ordered_list_item)))),

    ordered_list_item: ($) =>
      prec.right(
        1,
        seq(
          field("marker", alias($._ordered_list_marker, $.ordered_list_marker)),
          optional(field("checkbox", $.checklist_marker)),
          optional($.anchor),
          field("content", $._inline_text),
          $._line_ending,
          repeat(
            choice(
              $.list_item_continuation,
              alias($._nested_unordered_list, $.unordered_list),
              alias($._nested_ordered_list, $.ordered_list),
            ),
          ),
        ),
      ),

    _nested_unordered_list: ($) =>
      prec.right(field("items", repeat1($._nested_unordered_list_item))),

    _nested_ordered_list: ($) =>
      prec.right(field("items", repeat1($._nested_ordered_list_item))),

    paragraph: ($) => prec.right(1, field("content", $._inline_text)),

    // INLINE FORMATTING
    inline_element: ($) =>
      choice(
        $.monospace,
        $.strong,
        $.emphasis,
        $.superscript,
        $.subscript,
        $.anchor,
        $.bibliography_entry,
        $.internal_xref,
        $.explicit_link,
        $.auto_link,
        $.highlight,
        $.passthrough_triple_plus,
        $.attribute_substitution,
        $.index_term,
        $.hard_break,
      ),

    _inline_text: ($) => prec.right(seq($.inline_seq_nonempty, repeat($.inline_seq_nonempty))),

    inline_seq_nonempty: ($) =>
      prec.right(seq($._inline_core_unit, repeat($._inline_core_unit))),

    _inline_core_unit: ($) =>
      choice(
        $.inline_macro,
        $.inline_element,
        $.escaped_char,
        $.punctuation,
        $.plain_text,
        $._whitespace,
      ),

    plain_text: ($) => prec.left(-50, $._plain_text_segment),
    _plain_text_segment: ($) => /[A-Za-z0-9$&@=]+/,
    plain_dash: ($) => token("-"),
    strong: ($) =>
      prec.left(
        1,
        choice(
          seq(
            field("open", alias($._strong_double_marker, $.strong_open)),
            field("content", $.strong_content),
            field("close", alias($._strong_double_marker, $.strong_close)),
          ),
          seq(
            field("open", alias($._strong_single_marker, $.strong_open)),
            field("content", $.strong_content),
            field("close", alias($._strong_single_marker, $.strong_close)),
          ),
        ),
      ),

    _strong_double_marker: ($) => token(prec(15, "**")),

    _strong_single_marker: ($) => token(prec(5, "*")),

    strong_content: ($) =>
      repeat1(
        choice(
          $.emphasis,
          $.monospace,
          $.superscript,
          $.subscript,
          $.escaped_char,
          token.immediate(/[^*\\\r\n]+/), // other text
        ),
      ),

    // Emphasis formatting (_italic_ or __italic__)
    _line_ending: ($) => token(prec(-2, /\r?\n/)),
    _blank_line: ($) => token(prec(-1, /[ \t]*\r?\n/)),
  },
});
