test/corpus/02_paragraphs.txt
================================================================================
Paragraphs with blank lines
================================================================================

This is a paragraph line 1
This is still the same paragraph line 2

This is a different paragraph
on multiple lines


Another paragraph after multiple blank lines

--------------------------------------------------------------------------------

(source_file
  (paragraph
    (inline_seq_nonempty
      (plain_text)
      (plain_text)
      (plain_text)
      (plain_text)
      (plain_text)
      (plain_text))
    (inline_seq_nonempty
      (plain_text)
      (plain_text)
      (plain_text)
      (plain_text)
      (plain_text)
      (plain_text)
      (plain_text)
      (plain_text)))
  (paragraph
    (inline_seq_nonempty
      (plain_text)
      (plain_text)
      (plain_text)
      (plain_text)
      (plain_text))
    (inline_seq_nonempty
      (plain_text)
      (plain_text)
      (plain_text)))
  (paragraph
    (inline_seq_nonempty
      (plain_text)
      (plain_text)
      (plain_text)
      (plain_text)
      (plain_text)
      (plain_text))))

================================================================================
Fake headings without space should be paragraphs
================================================================================

==NotAHeading because no space
===NotAHeadingEither
====== Also not a heading

--------------------------------------------------------------------------------

(source_file
  (paragraph
    (inline_seq_nonempty
      (plain_text)
      (plain_text)
      (plain_text)
      (plain_text))
    (inline_seq_nonempty
      (plain_text)))
  (section
    (section_level_6
      (section_marker_6)
      (title))))

================================================================================
Mixed paragraphs and blank lines
================================================================================

First paragraph

==Not a heading

Second paragraph
continues here

--------------------------------------------------------------------------------

(source_file
  (paragraph
    (inline_seq_nonempty
      (plain_text)
      (plain_text)))
  (paragraph
    (inline_seq_nonempty
      (plain_text)
      (plain_text)
      (plain_text)))
  (paragraph
    (inline_seq_nonempty
      (plain_text)
      (plain_text))
    (inline_seq_nonempty
      (plain_text)
      (plain_text))))

================================================================================
Single paragraph line
================================================================================

Just one line

--------------------------------------------------------------------------------

(source_file
  (paragraph
    (inline_seq_nonempty
      (plain_text)
      (plain_text)
      (plain_text))))
