test/corpus/04_hierarchy.txt
================================================================================
Section hierarchy nesting
================================================================================

= Section A
Paragraph under A

== Section B
Paragraph under B

=== Section C
Paragraph under C

--------------------------------------------------------------------------------

(source_file
  (section
    (section_level_1
      (section_marker_1)
      (title)
      (paragraph
        (inline_seq_nonempty
          (plain_text)))
      (section_level_2
        (section_marker_2)
        (title)
        (paragraph
          (inline_seq_nonempty
            (plain_text)))
        (section_level_3
          (section_marker_3)
          (title)
          (paragraph
            (inline_seq_nonempty
              (plain_text))))))))

================================================================================
Multiple sections at same level
================================================================================

= Section 1
Content for section 1

= Section 2
Content for section 2

== Subsection 2.1
Content for subsection

= Section 3
Content for section 3

--------------------------------------------------------------------------------

(source_file
  (section
    (section_level_1
      (section_marker_1)
      (title)
      (paragraph
        (inline_seq_nonempty
          (plain_text)))))
  (section
    (section_level_1
      (section_marker_1)
      (title)
      (paragraph
        (inline_seq_nonempty
          (plain_text)))
      (section_level_2
        (section_marker_2)
        (title)
        (paragraph
          (inline_seq_nonempty
            (plain_text))))))
  (section
    (section_level_1
      (section_marker_1)
      (title)
      (paragraph
        (inline_seq_nonempty
          (plain_text))))))

================================================================================
Deep nesting with all levels
================================================================================

= Level 1
Content at level 1

== Level 2
Content at level 2

=== Level 3
Content at level 3

==== Level 4
Content at level 4

===== Level 5
Content at level 5

====== Level 6
Content at level 6

--------------------------------------------------------------------------------

(source_file
  (section
    (section_level_1
      (section_marker_1)
      (title)
      (paragraph
        (inline_seq_nonempty
          (plain_text)))
      (section_level_2
        (section_marker_2)
        (title)
        (paragraph
          (inline_seq_nonempty
            (plain_text)))
        (section_level_3
          (section_marker_3)
          (title)
          (paragraph
            (inline_seq_nonempty
              (plain_text)))
          (section_level_4
            (section_marker_4)
            (title)
            (paragraph
              (inline_seq_nonempty
                (plain_text)))
            (section_level_5
              (section_marker_5)
              (title)
              (paragraph
                (inline_seq_nonempty
                  (plain_text)))
              (section_level_6
                (section_marker_6)
                (title)
                (paragraph
                  (inline_seq_nonempty
                    (plain_text)))))))))))

================================================================================
Sections with attributes
================================================================================

:author: John Doe

= Main Section
:version: 1.0

First paragraph

== Subsection
:role: example

Subsection content

--------------------------------------------------------------------------------

(source_file
  (attribute_entry
    (attribute_value))
  (section
    (section_level_1
      (section_marker_1)
      (title)
      (attribute_entry
        (attribute_value))
      (paragraph
        (inline_seq_nonempty
          (plain_text)))
      (section_level_2
        (section_marker_2)
        (title)
        (attribute_entry
          (attribute_value))
        (paragraph
          (inline_seq_nonempty
            (plain_text)))))))
