test/corpus/05_edge_cases.txt
================================================================================
Indented headings are treated as valid headings
================================================================================

  = Indented level 1
   == Indented level 2
	=== Indented with tab

--------------------------------------------------------------------------------

(source_file
  (section
    (section_level_1
      (section_marker_1)
      (title)
      (section_level_2
        (section_marker_2)
        (title)
        (section_level_3
          (section_marker_3)
          (title))))))

================================================================================
Invalid attribute patterns should be paragraphs
================================================================================

: missing name after colon
:incomplete-because-no-second-colon
:: double colon start
::: triple colon

--------------------------------------------------------------------------------

(source_file
  (paragraph
  (paragraph
  (paragraph
  (paragraph

================================================================================
Attributes with spaces in values and empty values
================================================================================

:name:    value with spaces
:empty:
:spaced: 	tabbed value

--------------------------------------------------------------------------------

(source_file
  (attribute_entry
    (attribute_value))
  (attribute_entry)
  (attribute_entry
    (attribute_value)))

================================================================================
Multiple consecutive blank lines
================================================================================

First paragraph


Second paragraph after two blanks



Third paragraph after three blanks

--------------------------------------------------------------------------------

(source_file
  (paragraph
  (paragraph
  (paragraph

================================================================================
Headings with trailing spaces
================================================================================

= Title with trailing spaces   
== Another with tabs	
=== Mix of spaces and content   text here

--------------------------------------------------------------------------------

(source_file
  (section
    (section_level_1
      (section_marker_1)
      (title)
      (section_level_2
        (section_marker_2)
        (title)
        (section_level_3
          (section_marker_3)
          (title))))))
