test/corpus/06_unordered_lists.txt
================================================================================
Simple unordered list with asterisk
================================================================================

* First item
* Second item
* Third item

--------------------------------------------------------------------------------

(source_file
  (unordered_list
    (unordered_list_item
      (unordered_list_marker)
      (inline_seq_nonempty
        (plain_text)
        (plain_text))))
  (unordered_list
    (unordered_list_item
      (unordered_list_marker)
      (inline_seq_nonempty
        (plain_text)
        (plain_text))))
  (unordered_list
    (unordered_list_item
      (unordered_list_marker)
      (inline_seq_nonempty
        (plain_text)
        (plain_text)))))

================================================================================
Simple unordered list with hyphen
================================================================================

- First item
- Second item
- Third item

--------------------------------------------------------------------------------

(source_file
  (unordered_list
    (unordered_list_item
      (unordered_list_marker)
      (inline_seq_nonempty
        (plain_text)
        (plain_text))))
  (unordered_list
    (unordered_list_item
      (unordered_list_marker)
      (inline_seq_nonempty
        (plain_text)
        (plain_text))))
  (unordered_list
    (unordered_list_item
      (unordered_list_marker)
      (inline_seq_nonempty
        (plain_text)
        (plain_text)))))

================================================================================
Mixed unordered list markers
================================================================================

* First item
- Second item
* Third item

--------------------------------------------------------------------------------

(source_file
  (unordered_list
    (unordered_list_item
      (unordered_list_marker)
      (inline_seq_nonempty
        (plain_text)
        (plain_text))))
  (unordered_list
    (unordered_list_item
      (unordered_list_marker)
      (inline_seq_nonempty
        (plain_text)
        (plain_text))))
  (unordered_list
    (unordered_list_item
      (unordered_list_marker)
      (inline_seq_nonempty
        (plain_text)
        (plain_text)))))

================================================================================
Not a list - missing space after marker
================================================================================

*NotAList*

-NotAList

--------------------------------------------------------------------------------

(source_file
  (paragraph
    (inline_seq_nonempty
      (inline_element
        (strong
          (strong_open)
          (strong_content)
          (strong_close)))))
  (paragraph
    (inline_seq_nonempty
      (plain_dash)
      (plain_text))))
