test/corpus/07_ordered_lists.txt
================================================================================
Simple ordered list
================================================================================

1. First item
2. Second item
3. Third item

--------------------------------------------------------------------------------

(source_file
  (ordered_list
    (ordered_list_item
      (ordered_list_marker)
      (text_with_inlines
        (text_segment))
      (ordered_list
        (ordered_list_item
          (ordered_list_marker)
          (text_with_inlines
            (text_segment))
          (ordered_list
            (ordered_list_item
              (ordered_list_marker)
              (text_with_inlines
                (text_segment)))))))))

================================================================================
Ordered list with multiple digits
================================================================================

10. Tenth item
11. Eleventh item
12. Twelfth item

--------------------------------------------------------------------------------

(source_file
  (ordered_list
    (ordered_list_item
      (ordered_list_marker)
      (text_with_inlines
        (text_segment))
      (ordered_list
        (ordered_list_item
          (ordered_list_marker)
          (text_with_inlines
            (text_segment))
          (ordered_list
            (ordered_list_item
              (ordered_list_marker)
              (text_with_inlines
                (text_segment)))))))))

================================================================================
Not a list - missing space after period
================================================================================

1.NotAList

2.NotAList

--------------------------------------------------------------------------------

(source_file
  (paragraph
    (text_with_inlines
      (text_segment)))
  (paragraph
    (text_with_inlines
      (text_segment))))

================================================================================
Not a list - decimal number in paragraph
================================================================================

The price is 1.25 dollars and 2.50 euros.

--------------------------------------------------------------------------------

(source_file
  (paragraph
    (text_with_inlines
      (text_segment))))
